<resources>
    <string name="app_name">PomodoroTimer</string>
    <string name="hello_header_text">Before you start, please tell us your first name</string>
    <string name="your_name">Your name</string>
    <string name="finishing_button">Move on button</string>
    <string name="name_error_empty">Your name field is empty, are you nameless? It is impossible :O</string>
    <string name="name_error_to_short">Your name is too short, it should be at least 3 letters long!</string>
    <string name="name_error_to_long">Your name is a bit long, it should be max. 18 letters, if your name is actually more than 18, sorry you will surely find an abbreviation :D</string>
    <string name="name_error_wrong_chars">I can\'t believe your name contains numbers or special characters :O</string>
    <string name="name_ok">Your name sounds great B) You can move on</string>
    <string name="user_profile">Profile</string>
    <string name="time_zero" translatable="false">00:00</string>
    <string name="twenty_five" translatable="false">25 min.</string>
    <string name="fifty" translatable="false">50 min.</string>
    <string name="set_session_time">Set session time:</string>
    <string name="session_notify_title">Your session is over!</string>
    <string name="session_notify_description">Return to the application and select or skip the break.</string>
    <string name="break_notify_title">Your break is over!</string>
    <string name="break_notify_description">Return to the application and start next session.</string>
    <string name="session_dialog_header_text">You have completed the session!</string>
    <string name="session_dialog_second_text">Take a break or if you want you can skip it and start another session.</string>
    <string name="skip_break">Skip the break</string>
    <string name="take_short_break">Take a 5 minute break</string>
    <string name="take_long_break">Take a 30 minute break</string>
    <string name="finish_session">Finish the session</string>
    <string name="finish_icon">Finish icon</string>
    <string name="break_dialog_header_text">Your break is over!</string>
    <string name="break_dialog_second_text">Another pomodoro session is about to begin.</string>
    <string name="timer_icon">Timer icon</string>
    <string name="break_dialog_button" translatable="false">Okey!</string>
    <string name="completed_sessions">Completed sessions</string>
    <string name="running_sessions">Running sessions</string>
    <string name="personalization">Personalization</string>
    <string name="alarm_sound">Alarm sound</string>
    <string name="session_time">Session time</string>
    <string name="logo" translatable="false">Logo</string>
    <string name="back">Return</string>
    <string name="monday_shortcut">Mo.</string>
    <string name="tuesday_shortcut">Tu.</string>
    <string name="wednesday_shortcut">We.</string>
    <string name="thursday_shortcut">Th.</string>
    <string name="friday_shortcut">Fr.</string>
    <string name="saturday_shortcut">Sa.</string>
    <string name="sunday_shortcut">Su.</string>
    <string name="hey">Hey,</string>
    <string name="your_stats_hello_text">Here are your stats</string>
    <string name="user">User</string>
    <string name="time_settings_header_text">Set your own time for sessions</string>
    <string name="hint_custom_time">e.g. 60 minutes</string>
    <string name="current_custom_time">The current set time:</string>
    <string name="time_error_same">The entered value is the same as the set value</string>
    <string name="time_error_higher">The value entered is beyond the limit, the maximum value is 60</string>
    <string name="time_error_empty">The field is empty</string>
    <string name="time_error_chars">Illegal characters</string>
    <string name="time_error_value_starts_with_0">The entered value cannot start with 0</string>
    <string name="timer_error_ok">Press the button to save</string>
    <string name="saved">Saved!</string>
    <string name="alarm_sound_settings_header_text">Set the alarm sound</string>
    <string name="alarm_1" translatable="false">Alarm 1</string>
    <string name="alarm_2" translatable="false">Alarm 2</string>
    <string name="your_own_alarm">Record your own</string>
    <string name="dialog_recording_header_text">Record your alarm sound!</string>
    <string name="dialog_recording_secondary_text">Hold down the first button to start. The maximum length of the recording is 10s</string>
    <string name="hold_button">Hold to start recording</string>
    <string name="exit_button">Exit</string>
    <string name="recording_on_start_message">Recording has started!</string>
</resources>