<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_view_background_rounded"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="30dp"
        app:cardBackgroundColor="@color/peach_puff"
        app:cardCornerRadius="2dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"
        android:textSize="16sp"
        android:text="@string/set_session_time"/>

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp">

        <com.google.android.material.chip.Chip
            android:id="@+id/twentyFiveMinutesChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty_five" />

        <com.google.android.material.chip.Chip
            android:id="@+id/fiftyMinutesChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifty" />

        <com.google.android.material.chip.Chip
            android:id="@+id/userMinutesChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </com.google.android.material.chip.ChipGroup>

</LinearLayout>