<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peach_puff"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingTop="30dp"
    android:paddingEnd="30dp"
    tools:context=".TimeSettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="56dp"
            android:text="@string/time_settings_header_text"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/returnButton"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back"
            android:rotation="180"
            android:src="@drawable/ic_baseline_arrow_forward"
            app:tint="@color/light_blue"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/customTimeTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_custom_time"
        app:boxBackgroundColor="@color/white"
        app:hintTextColor="@color/black"
        app:suffixText="minutes">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/customTimeTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:lines="1"
            android:maxLength="2"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/currentTimeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="85dp"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/doneButton"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="15dp"
            android:alpha="0.8"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="20dp"
            app:cardElevation="7dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/finishing_button"
                android:padding="12dp"
                android:src="@drawable/ic_baseline_done"
                app:tint="@color/light_blue" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/messageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>